#-----------------------------------------------------------------------------
# CMakeLists file for building the CHAI3D examples.
#
# Created by Sonny Chan
#	March 2009, Stanford University
#-----------------------------------------------------------------------------

# Recurse into the directory for each example
ADD_SUBDIRECTORY(GLUT)

